# RAG-Excel

./: .gitignore  README.md  create_dummy_excel.py  main.py  pyproject.toml  without_tantivy.py
